Added User Login component

--- a/src/app/landingPage/landing-header/landing-header.component.html
+++ b/src/app/landingPage/landing-header/landing-header.component.html
@@ -13,9 +13,9 @@
                         Login
                     </a>
                     <ul class="dropdown-menu ldropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#">Admin</a></li>
-                            <li><a class="dropdown-item" href="#">Customer</a></li>
-                            <li><a class="dropdown-item" href="#">Mechanic</a></li>
+                            <li><a class="dropdown-item" href="/login/admin">Admin</a></li>
+                            <li><a class="dropdown-item" href="/login/user">Customer</a></li>
+                            <li><a class="dropdown-item" href="/login/mechanic">Mechanic</a></li>
                     </ul>
                 </li>
                   
@@ -25,8 +25,8 @@
                         Register
                     </a>
                     <ul class="dropdown-menu ldropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#">Customer</a></li>
-                            <li><a class="dropdown-item" href="#">Mechanic</a></li>
+                            <li><a class="dropdown-item" href="/register/user">Customer</a></li>
+                            <li><a class="dropdown-item" href="/register/mechanic">Mechanic</a></li>
                     </ul>
                 </li>
             </ul>
