--- a/src/app/login-Registration/user-login/user-login.component.html
+++ b/src/app/login-Registration/user-login/user-login.component.html
@@ -1,1 +1,32 @@
-<p>user-login works!</p>
+<app-landing-header></app-landing-header>
+<div id="login">
+    <h3 class="text-center text-white pt-5">Login form</h3>
+    <div class="container">
+        <div id="login-row" class="row justify-content-center align-items-center">
+            <div id="login-column" class="col-md-6">
+                <div id="login-box" class="col-md-12">
+                    <form id="login-form" class="form" action="" method="post">
+                        <h3 class="text-center text-dark">Login</h3>
+                        <div class="form-group">
+                            <label for="username" class="text-dark">Username:</label><br>
+                            
+                            <input type="text" name="username" id="username" class="form-control" [(ngModel)]="username" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="text-dark">Password:</label><br>
+                            
+                            <input type="text" name="password" id="password" class="form-control" [(ngModel)]="password" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" name="submit" class="btn btn-dark btn-md" value="submit" (click)="loginUser()">
+                        </div>
+                        <div id="register-link" class="text-right">
+                            <a href="#" class="text-dark">Register here</a>
+                            
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
